--- a/index.html
+++ b/index.html
@@ -5,60 +5,23 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Play and learn</title>
-  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <!-- <link rel="preload" href="./assets/img/backgrounds/startbg.jpg" as='image'> -->
-  <!-- <link rel="preload" href="./assets/img/backgrounds/menubg.png" as='image'> -->
   <link rel="shortcut icon" href="./assets/img/icons/favicon.ico">
   <link rel="stylesheet" href="./styles/style.css">
   <link rel="stylesheet" href="./styles/amedia.css">
   <link rel="stylesheet" href="./styles/preloader.css">
+  <script async src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <!-- <script defer type="module" src="./apps/SPA.js"></script> -->
   <!-- <script defer type="module" src="./apps/AudioController.js"></script> -->
   <!-- <script defer type="module" src="./apps/Controlls.js"></script> -->
   <!-- <script defer type="module" src="./apps/Overlay.js"></script> -->
   <script defer type="module" src="./apps/script.js"></script>
-  <!-- <script defer type="module" src="./apps/menu.js"></script> -->
+  <!-- <script async type="module" src="./apps/menu.js"></script> -->
   <!-- <script async type="module" src="./apps/logic.js"></script> -->
   <!-- <script async type="module" src="./apps/logicHard.js"></script>
   <script async type="module" src="./apps/logicMedium.js"></script>
   <script async type="module" src="./apps/logicEasy.js"></script> -->
 </head>
 <body>
-  <div class="preloader" id="preloader">
-    <div class="cssload-container">
-      <div class="cssload-thing"></div>
-      <div class="cssload-thing"></div>
-      <div class="cssload-thing"></div>
-      <div class="cssload-thing"></div>
-      <div class="cssload-thing"></div>
-      <div class="cssload-thing"></div>
-      <div class="cssload-thing"></div>
-      <div class="cssload-thing"></div>
-      <div class="cssload-thing"></div>
-      <div class="cssload-thing"></div>
-      <div class="cssload-thing"></div>
-      <div class="cssload-thing"></div>
-      <div class="cssload-thing"></div>
-      <div class="cssload-thing"></div>
-      <div class="cssload-thing"></div>
-      <div class="cssload-thing"></div>
-      <div class="cssload-thing"></div>
-      <div class="cssload-thing"></div>
-      <div class="cssload-thing"></div>
-      <div class="cssload-thing"></div>
-      <div class="cssload-thing"></div>
-      <div class="cssload-thing"></div>
-      <div class="cssload-thing"></div>
-      <div class="cssload-thing"></div>
-      <div class="cssload-thing"></div>
-      <div class="cssload-thing"></div>
-      <div class="cssload-thing"></div>
-      <div class="cssload-thing"></div>
-      <div class="cssload-thing"></div>
-      <div class="cssload-thing"></div>
-    </div>
-  </div>
-
   <div class="wrapper"></div>
 </body>
 </html>
