--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!-- <script defer type="module" src="./apps/AudioController.js"></script> -->
   <!-- <script defer type="module" src="./apps/Controlls.js"></script> -->
   <script defer type="module" src="./apps/script.js"></script>
-  <script type="module" src="./apps/Overlay.js"></script>
+  <script type="module" src="./apps/App/Overlay.js"></script>
   <!-- <script async type="module" src="./apps/menu.js"></script> -->
   <!-- <script async type="module" src="./apps/logic.js"></script> -->
   <!-- <script async type="module" src="./apps/logicHard.js"></script>
