--- a/index.html
+++ b/index.html
@@ -4,31 +4,31 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-  <title>Play and learn</title>
+  <title>Memory Game</title>
   <link rel="shortcut icon" href="./assets/img/icons/favicon.ico">
   <link rel="stylesheet" href="./styles/style.css">
   <link rel="stylesheet" href="./styles/amedia.css">
   <link rel="stylesheet" href="./styles/preloader.css">
-  <!-- <link rel="stylesheet" href="css/portrait.css" media="all and (orientation:portrait)"/>
-  <link rel="stylesheet" href="css/landscape.css" media="all and (orientation:landscape)"/> -->
-  <!-- <link rel="preload" href="./assets/img/backgrounds/startbg.png" as='image'>
-  <link rel="preload" href="./assets/img/backgrounds/menubg.png" as='image'> -->
-  <!-- <script>
-    screen.orientation.lock('portrait');
-  </script> -->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <!-- <script defer type="module" src="./apps/SPA.js"></script> -->
-  <!-- <script defer type="module" src="./apps/AudioController.js"></script> -->
-  <!-- <script defer type="module" src="./apps/Controlls.js"></script> -->
   <script defer type="module" src="./apps/script.js"></script>
-  <script type="module" src="./apps/App/Overlay.js"></script>
-  <!-- <script async type="module" src="./apps/menu.js"></script> -->
-  <!-- <script async type="module" src="./apps/logic.js"></script> -->
-  <!-- <script async type="module" src="./apps/logicHard.js"></script>
-  <script async type="module" src="./apps/logicMedium.js"></script>
-  <script async type="module" src="./apps/logicEasy.js"></script> -->
 </head>
 <body>
   <div class="wrapper"></div>
 </body>
 </html>
+
+
+<!-- <script defer type="module" src="./apps/SPA.js"></script> -->
+  <!-- <script defer type="module" src="./apps/AudioController.js"></script> -->
+  <!-- <script defer type="module" src="./apps/Controlls.js"></script> -->
+  <!-- <script type="module" src="./apps/App/Overlay.js"></script> -->
+  <!-- <script async type="module" src="./apps/menu.js"></script> -->
+  <!-- <script async type="module" src="./apps/logic.js"></script> -->
+  <!-- <script async type="module" src="./apps/logicHard.js"></script>
+  <script async type="module" src="./apps/logicMedium.js"></script>
+  <script async type="module" src="./apps/logicEasy.js"></script> -->
+  <!-- <link rel="stylesheet" href="css/portrait.css" media="all and (orientation:portrait)"/>
+  <link rel="stylesheet" href="css/landscape.css" media="all and (orientation:landscape)"/> -->
+  <!-- <script>
+    screen.orientation.lock('portrait');
+  </script> -->
